# minifyCpp

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: build.yml
examples/: xxd.c
examples/headers/: foo.c  foo.h  main.c
examples/macros/: main.c
examples/structs/: main.c
examples/xxd/: xxd.c
include/actions/: AddDefinesAction.hpp  ExpandMacroAction.hpp  FormatAction.hpp  MinifySymbolsAction.hpp  PPSymbolsAction.hpp  expandMacroAction.hpp  minifyAction.hpp
include/format/: macroFormat.hpp  minifyFormat.hpp
include/generator/: ast.hpp  context.hpp  lexer.hpp  parser.hpp  types.hpp
include/lang/: clexer.hpp
include/util/: symbols.hpp
src/: ciexplorer.cpp  explorer.cpp  expr.txt  generate.py  main.cpp  main.py  microtokens.py  minifier.cpp  out.py  parser.py  test_ebnf_grammar.g  testparser.py  testtokens.py  tokens.py
src/actions/: AddDefinesAction.cpp  ExpandMacroAction.cpp  FormatAction.cpp  MinifySymbolsAction.cpp  PPSymbolsAction.cpp  expandMacroAction.cpp  minifyAction.cpp
src/apps/: minifier.cpp
src/format/: macroFormat.cpp  minifyFormat.cpp
src/generator/: ast.cpp  ast.py  context.cpp  grammar.y  grammarparser.py  grammartokens.py  lexer.cpp  lexer.py  main.cpp  parser.cpp  parsergenerator.py  parserstub.py  types.cpp  types.py
src/lang/: bnf_grammar.g  clexer.cpp  ebnf_grammar.g  macrotokens.py  microtokens.py  minify.py  tinyctokens.py
src/minifier/: main.cpp
src/util/: symbols.cpp
